<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:id="@+id/enable_bank_id"
        android:defaultValue="true"
        android:key="enable_bank_switch"
        android:summary="@string/pref_description_enable_bank"
        android:title="@string/pref_title_enable_bank" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:inputType="textCapWords"
        android:key="name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name" />
    <EditTextPreference
        android:inputType="textCapWords"
        android:key="bank"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_bank" />
    <EditTextPreference
        android:inputType="text"
        android:key="rut"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_rut" />
    <EditTextPreference
        android:inputType="number"
        android:key="account_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_account_number" />
    <EditTextPreference
        android:inputType="textCapWords"
        android:key="account_type"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_account_type" />
    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />


</PreferenceScreen>
