<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask description, and buttons to select a priority
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_debt_title" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:text="@string/add_debt_hint" />

    <!-- EditText for name description input -->
    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_debt_amount"
        android:inputType="numberSigned"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_debt_description"
        android:inputType="textCapSentences"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:endYear="2100"
        android:headerBackground="?attr/colorPrimary"
        android:startYear="1900" />

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark" />
    </LinearLayout>

</ScrollView>